--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Travel Itineraries</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">My Travel Planner</a>
+        </div>
+    </nav>
+
+    <div class="container mt-4">
+        <h1 class="text-center mb-4">Travel Itineraries</h1>
+        <div class="row">
+            <!-- Card for Itinerary 1 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Bali Getaway</h5>
+                        <p class="card-text">Relaxing trip to Bali with visits to beaches, temples, and local markets.</p>
+                        <p class="text-muted"><strong>Date:</strong> January 5 - January 12, 2025</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card for Itinerary 2 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Paris Adventure</h5>
+                        <p class="card-text">Explore the Eiffel Tower, Louvre Museum, and the charming streets of Paris.</p>
+                        <p class="text-muted"><strong>Date:</strong> March 10 - March 20, 2025</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card for Itinerary 3 -->
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Tokyo Discovery</h5>
+                        <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
+                        <p class="text-muted"><strong>Date:</strong> May 15 - May 25, 2025</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
