--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Travel Itineraries</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .card-link {
+            text-decoration: none;
+            color: inherit;
+        }
+        .card-link:hover {
+            color: inherit;
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -19,38 +28,44 @@
         <div class="row">
             <!-- Card for Itinerary 1 -->
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Bali Getaway</h5>
-                        <p class="card-text">Relaxing trip to Bali with visits to beaches, temples, and local markets.</p>
-                        <p class="text-muted"><strong>Date:</strong> January 5 - January 12, 2025</p>
+                <a href="jakarta-bandung.html" class="card-link">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Bali Getaway">
+                        <div class="card-body">
+                            <h5 class="card-title">Jakarta & Bandung</h5>
+                            <p class="card-text">Family Adventure to Jakarta and Bandung</p>
+                            <p class="text-muted"><strong>Date:</strong> March 29 - April 2, 2025</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- Card for Itinerary 2 -->
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Paris Adventure</h5>
-                        <p class="card-text">Explore the Eiffel Tower, Louvre Museum, and the charming streets of Paris.</p>
-                        <p class="text-muted"><strong>Date:</strong> March 10 - March 20, 2025</p>
+                <a href="paris.html" class="card-link">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Paris Adventure">
+                        <div class="card-body">
+                            <h5 class="card-title">Japan Tokyo</h5>
+                            <p class="card-text">Explore the Eiffel Tower, Louvre Museum, and the charming streets of Paris.</p>
+                            <p class="text-muted"><strong>Date:</strong> March 10 - March 20, 2025</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
 
             <!-- Card for Itinerary 3 -->
             <div class="col-md-4 mb-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Destination 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Tokyo Discovery</h5>
-                        <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
-                        <p class="text-muted"><strong>Date:</strong> May 15 - May 25, 2025</p>
+                <a href="tokyo.html" class="card-link">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Tokyo Discovery">
+                        <div class="card-body">
+                            <h5 class="card-title">Tokyo Discovery</h5>
+                            <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
+                            <p class="text-muted"><strong>Date:</strong> May 15 - May 25, 2025</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
