--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <div class="col-md-4 mb-4">
                 <a href="jakarta-bandung.html" class="card-link">
                     <div class="card">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Bali Getaway">
+                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Jakarta & Bandung">
                         <div class="card-body">
                             <h5 class="card-title">Jakarta & Bandung</h5>
-                            <p class="card-text">Family Adventure to Jakarta and Bandung</p>
+                            <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats</p>
                             <p class="text-muted"><strong>Date:</strong> March 29 - April 2, 2025</p>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
             </div>
 
             <!-- Card for Itinerary 2 -->
-            <div class="col-md-4 mb-4">
+            <!-- <div class="col-md-4 mb-4">
                 <a href="paris.html" class="card-link">
                     <div class="card">
                         <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Paris Adventure">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
             <!-- Card for Itinerary 3 -->
             <div class="col-md-4 mb-4">
@@ -62,7 +62,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Tokyo Discovery</h5>
                             <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
-                            <p class="text-muted"><strong>Date:</strong> May 15 - May 25, 2025</p>
+                            <p class="text-muted"><strong>Date:</strong> Sep 13 - Sep 21, 2025</p>
                         </div>
                     </div>
                 </a>
