--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-md-4 mb-4">
                 <a href="tokyo.html" class="card-link">
                     <div class="card">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Tokyo Discovery">
+                        <img src="https://rouentan18.github.io/images/tokyo.webp" class="card-img-top" alt="Tokyo Discovery">
                         <div class="card-body">
                             <h5 class="card-title">Tokyo Discovery</h5>
                             <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
