--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="col-md-4 mb-4">
                 <a href="jakarta-bandung.html" class="card-link">
                     <div class="card">
-                        <img src="https://rouentan18.github.io/images/jakarta-bandung.webp" class="card-img-top" alt="Jakarta & Bandung">
+                        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="card-img-top" alt="Jakarta & Bandung">
                         <div class="card-body">
                             <h5 class="card-title">Jakarta & Bandung</h5>
                             <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats</p>
