--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="card-img-top" alt="Jakarta & Bandung">
                         <div class="card-body">
                             <h5 class="card-title">Jakarta & Bandung</h5>
-                            <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats</p>
+                            <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
                             <p class="text-muted"><strong>Date:</strong> March 29 - April 2, 2025</p>
                         </div>
                     </div>
