--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bali Getaway</title>
+    <title>jakarta-Bandung</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -15,16 +15,18 @@
     </nav>
 
     <div class="container mt-4">
-        <h1>Bali Getaway</h1>
-        <p>Date: January 5 - January 12, 2025</p>
-        <img src="https://via.placeholder.com/800x400" class="img-fluid mb-3" alt="Bali">
-        <p>Enjoy a relaxing week in Bali with visits to pristine beaches, historic temples, and vibrant local markets.</p>
+        <h1>Jakarta & Bandung</h1>
+        <p>Date: March 29 - April 2, 2025</p>
+        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
+        <p>Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
         <p>Highlights:</p>
         <ul>
-            <li>Tanah Lot Temple</li>
-            <li>Ubud Monkey Forest</li>
-            <li>Kuta Beach</li>
+            <li>Day 1 & 2 Jakarta</li>
+            <li>Day 3 & 4 Bandung</li>
+            <li>Day 5 Go to Jakarta airport from Bandung</li>
         </ul>
+
+        <p>Day 1</p>
         <a href="index.html" class="btn btn-primary mt-3">Back to Itineraries</a>
     </div>
 
