--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -21,12 +21,45 @@
         <p>Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
         <p>Highlights:</p>
         <ul>
+            <li>Flight: KLM Royal Dutch Airlines</li>
             <li>Day 1 & 2 Jakarta</li>
             <li>Day 3 & 4 Bandung</li>
             <li>Day 5 Go to Jakarta airport from Bandung</li>
         </ul>
 
-        <p>Day 1</p>
+        <h3>Day 1</h3>
+
+        <div class="row row-cols-2">
+            <div class="col">
+              5.05pm - 6.10pm
+            </div>
+            <div class="col-6">
+              From KL to Jakarta
+            </div>
+        </div>
+
+        <div class="row row-cols-2">
+            <div class="col">
+              Leaving airport
+            </div>
+            <div class="col-6">
+              <p>Option 1:</p>
+              <ul>
+                <li>
+                    Pantjoran Pantai Indah Kapuk
+                    <ul>
+                        <li>Martabak Pecenongan 43 - PIK (3pm - 11pm)</li>
+                        <li>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food 
+                            (9am - 10pm)</li>
+                        <li>New Tempo Doeloe (10am - 10pm)</li>
+                    </ul>
+
+                </li>
+
+              </ul>
+            </div>
+        </div>
+
         <a href="index.html" class="btn btn-primary mt-3">Back to Itineraries</a>
     </div>
 
