--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -31,7 +31,7 @@
 
         <div class="row row-cols-2">
             <div class="col-3">
-              5.05pm - 6.10pm
+              5.05pm
             </div>
             <div class="col-9">
               From KL to Jakarta
@@ -40,9 +40,10 @@
 
         <div class="row row-cols-2">
             <div class="col-3">
-              Leaving airport
+              6.10pm
             </div>
             <div class="col-9">
+              <p>Leaving airport</p>
               <p>Option 1:</p>
               <ul>
                 <li>
@@ -55,7 +56,24 @@
                     </ul>
 
                 </li>
-
+                <li>
+                    Check in Holiday Inn & Suites Jakarta Gajah Mada
+                </li>
+              </ul>
+              <p>Option 2:</p>
+              <ul>
+                <li>
+                    Check in Holiday Inn & Suites Jakarta Gajah Mada
+                    <ul>
+                        <li>
+                            Little Sheep Hot Pot (11am-12am)<br>
+                            ** All you can eat (178k regular, 218k premium)
+                        </li>
+                        <li>
+                            Shao Kao Gajah Mada (4pm - 1am)
+                        </li>
+                    </ul>
+                </li>
               </ul>
             </div>
         </div>
