--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -47,7 +47,7 @@
               <p>Option 1:</p>
               <ul>
                 <li>
-                    Pantjoran Pantai Indah Kapuk
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal1"></a>Pantjoran Pantai Indah Kapuk
                     <ul>
                         <li>Martabak Pecenongan 43 - PIK (3pm - 11pm)</li>
                         <li>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food 
@@ -80,6 +80,12 @@
 
         <a href="index.html" class="btn btn-primary mt-3">Back to Itineraries</a>
     </div>
+    <div id="modal1" class="modal" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+            ...
+        </div>
+    </div>
+    
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
