--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -47,7 +47,7 @@
               <p>Option 1:</p>
               <ul>
                 <li>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal1"></a>Pantjoran Pantai Indah Kapuk
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#modal1">Pantjoran Pantai Indah Kapuk</a>
                     <ul>
                         <li>Martabak Pecenongan 43 - PIK (3pm - 11pm)</li>
                         <li>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food 
