--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -84,16 +84,19 @@
         <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
             <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Pantjoran Pantai Indah Kapuk</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  testing 123
+                  <p>Pantjoran Pantai Indah Kapuk（简称 Pantjoran PIK）是位于印尼雅加达 Pantai Indah Kapuk
+                    （PIK）区域的一家受欢迎的餐饮和休闲区。这个地方结合了传统和现代的风格，是一个集美
+                    食、购物和文化体验于一体的目的地。Pantjoran PIK 的设计灵感来源于中国和印尼传统文化，
+                    特别是沿用了“Pantjoran”这个名字，它在荷兰时期是雅加达的一个历史悠久的中国社区。</p>
                 </div>
-                <div class="modal-footer">
+                <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                   <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
+                </div> -->
               </div>
         </div>
     </div>
