--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -88,10 +88,13 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Pantjoran Pantai Indah Kapuk（简称 Pantjoran PIK）是位于印尼雅加达 Pantai Indah Kapuk
-                    （PIK）区域的一家受欢迎的餐饮和休闲区。这个地方结合了传统和现代的风格，是一个集美
-                    食、购物和文化体验于一体的目的地。Pantjoran PIK 的设计灵感来源于中国和印尼传统文化，
-                    特别是沿用了“Pantjoran”这个名字，它在荷兰时期是雅加达的一个历史悠久的中国社区。</p>
+                  <p>Pantjoran Pantai Indah Kapuk (commonly known as Pantjoran PIK) is a popular dining and leisure area 
+                    located in the Pantai Indah Kapuk (PIK) region of Jakarta, Indonesia. This destination combines traditional 
+                    and modern styles, offering a mix of culinary delights, shopping, and cultural experiences. The design of 
+                    Pantjoran PIK is inspired by Chinese and Indonesian traditional cultures, particularly drawing on the name 
+                    "Pantjoran," which refers to a historic Chinese community in Jakarta during the Dutch colonial period.
+                  </p>
+                  <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
