--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -44,7 +44,7 @@
             </div>
             <div class="col-9">
               <p>Leaving airport</p>
-              <p>Option 1:</p>
+              <p><b>Option 1:</b></p>
               <ul>
                 <li>
                     <a href="#" data-bs-toggle="modal" data-bs-target="#modal1">Pantjoran Pantai Indah Kapuk</a>
@@ -60,7 +60,7 @@
                     Check in Holiday Inn & Suites Jakarta Gajah Mada
                 </li>
               </ul>
-              <p>Option 2:</p>
+              <p><b>Option 2:</b></p>
               <ul>
                 <li>
                     Check in Holiday Inn & Suites Jakarta Gajah Mada
@@ -88,7 +88,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <p>Pantjoran Pantai Indah Kapuk (commonly known as Pantjoran PIK) is a popular dining and leisure area 
+                  <p><b>Pantjoran Pantai Indah Kapuk</b> (commonly known as Pantjoran PIK) is a popular dining and leisure area 
                     located in the Pantai Indah Kapuk (PIK) region of Jakarta, Indonesia. This destination combines traditional 
                     and modern styles, offering a mix of culinary delights, shopping, and cultural experiences. The design of 
                     Pantjoran PIK is inspired by Chinese and Indonesian traditional cultures, particularly drawing on the name 
@@ -103,7 +103,35 @@
               </div>
         </div>
     </div>
-    
+    <div id="modal2" class="modal" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+            <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Pantjoran Pantai Indah Kapuk</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <p>
+                    <b>Martabak Pecenongan 43 - PIK</b> is one of Jakarta's most famous Martabak brands, with a history of over 40 years.
+                  </p>
+                  <p>
+                    Price for small size: Rp. 100,000–130,000
+                  </p>
+                  <p><b>Recommended flavors:</b></p>
+                  <ul>
+                    <li><b>Martabak Manis Coklat Keju:</b> A classic combination of chocolate and cheese.</li>
+                    <li><b>Nutella + Banana:</b> Rich hazelnut spread paired with banana, perfectly sweet and not overwhelming.</li>
+                    <li><b>Green Tea Cheese:</b> An innovative blend of matcha and cheese.</li>
+                  </ul>
+                  <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div> -->
+              </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
