--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -6,10 +6,15 @@
     <title>jakarta-Bandung</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
+            <a href="index.html" class="btn btn-link">
+                <i class="bi bi-arrow-left-circle"></i> Back
+            </a>
             <a class="navbar-brand" href="index.html">My Travel Planner</a>
         </div>
     </nav>
@@ -77,8 +82,6 @@
               </ul>
             </div>
         </div>
-
-        <a href="index.html" class="btn btn-primary mt-3">Back to Itineraries</a>
     </div>
     <div id="modal1" class="modal" tabindex="-1">
         <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
