--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -8,12 +8,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
+    <style>
+        .back-icon {
+            font-size: 2rem; /* Adjust size as needed */
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a href="index.html" class="btn btn-link">
-                <i class="bi bi-arrow-left-circle"></i> Back
+                <i class="bi bi-arrow-left-circle back-icon"></i> Back
             </a>
             <a class="navbar-brand" href="index.html">My Travel Planner</a>
         </div>
