--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -18,10 +18,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a href="index.html" class="btn btn-link">
-                <i class="bi bi-arrow-left-circle back-icon"></i> Back
+            
+            <a class="navbar-brand" href="index.html">My Travel Planner
+                <i class="bi bi-arrow-left-circle back-icon"></i>
             </a>
-            <a class="navbar-brand" href="index.html">My Travel Planner</a>
         </div>
     </nav>
 
