--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Travel Planner</a>
+            <a class="navbar-brand" href="#">
+                <i class="bi bi-house-fill bi-icon"></i>
+                My Travel Planner
+            </a>
         </div>
     </nav>
 
