--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
-        .back-icon {
+        .bi-icon {
             font-size: 2rem; /* Adjust size as needed */
         }
     </style>
@@ -19,8 +19,9 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             
-            <a class="navbar-brand" href="index.html">My Travel Planner
-                <i class="bi bi-arrow-left-circle back-icon"></i>
+            <a class="navbar-brand" href="index.html">
+                <i class="bi bi-house-fill bi-icon"></i>
+                My Travel Planner
             </a>
         </div>
     </nav>
@@ -60,7 +61,7 @@
                 <li>
                     <a href="#" data-bs-toggle="modal" data-bs-target="#modal1">Pantjoran Pantai Indah Kapuk</a>
                     <ul>
-                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2"></a>Martabak Pecenongan 43 - PIK</a> (3pm - 11pm)</li>
+                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Martabak Pecenongan 43 - PIK</a> (3pm - 11pm)</li>
                         <li>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food 
                             (9am - 10pm)</li>
                         <li>New Tempo Doeloe (10am - 10pm)</li>
