--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Travel Itineraries</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <style>
         .card-link {
             text-decoration: none;
@@ -13,6 +16,9 @@
         }
         .card-link:hover {
             color: inherit;
+        }
+        .bi-icon {
+            font-size: 2rem; /* Adjust size as needed */
         }
     </style>
 </head>
