--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -11,7 +11,7 @@
 
     <style>
         .bi-icon {
-            font-size: 1rem; /* Adjust size as needed */
+            font-size: 1.5rem; /* Adjust size as needed */
         }
     </style>
 </head>
@@ -133,7 +133,7 @@
                     <li><b>Nutella + Banana:</b> Rich hazelnut spread paired with banana, perfectly sweet and not overwhelming.</li>
                     <li><b>Green Tea Cheese:</b> An innovative blend of matcha and cheese.</li>
                   </ul>
-                  <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
+                  <a href="https://www.pecenongan43.com/" target="_blank">www.pecenongan43.com/</a>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
