--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -104,7 +104,7 @@
                     Pantjoran PIK is inspired by Chinese and Indonesian traditional cultures, particularly drawing on the name 
                     "Pantjoran," which refers to a historic Chinese community in Jakarta during the Dutch colonial period.
                   </p>
-                  <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
+                  <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="pantjoran-pik">
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -133,7 +133,10 @@
                     <li><b>Nutella + Banana:</b> Rich hazelnut spread paired with banana, perfectly sweet and not overwhelming.</li>
                     <li><b>Green Tea Cheese:</b> An innovative blend of matcha and cheese.</li>
                   </ul>
-                  <a href="https://www.pecenongan43.com/" target="_blank">www.pecenongan43.com/</a>
+                  <br>
+                  <p>Website:</p>
+                  <a href="https://www.pecenongan43.com/" target="_blank">www.pecenongan43.com</a>
+                  <img src="https://rouentan18.github.io/images/martabak-pecenongan-43.jpg" class="img-fluid mb-3" alt="martabak-pecenongan-43">
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
