--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -133,9 +133,10 @@
                     <li><b>Nutella + Banana:</b> Rich hazelnut spread paired with banana, perfectly sweet and not overwhelming.</li>
                     <li><b>Green Tea Cheese:</b> An innovative blend of matcha and cheese.</li>
                   </ul>
-                  <br>
-                  <p>Website:</p>
+            
+                  <p>Website:
                   <a href="https://www.pecenongan43.com/" target="_blank">www.pecenongan43.com</a>
+                  </p>
                   <img src="https://rouentan18.github.io/images/martabak-pecenongan-43.jpg" class="img-fluid mb-3" alt="martabak-pecenongan-43">
                 </div>
                 <!-- <div class="modal-footer">
