--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <i class="bi bi-house-fill bi-icon"></i>
-                My Travel Planner
+                Travel Planner
             </a>
         </div>
     </nav>
