--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -21,7 +21,7 @@
             
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-house-fill bi-icon"></i>
-                My Travel Planner
+                Travel Planner
             </a>
         </div>
     </nav>
@@ -117,7 +117,7 @@
         <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
             <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Pantjoran Pantai Indah Kapuk</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Martabak Pecenongan 43 - PIK</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -125,7 +125,7 @@
                     <b>Martabak Pecenongan 43 - PIK</b> is one of Jakarta's most famous Martabak brands, with a history of over 40 years.
                   </p>
                   <p>
-                    Price for small size: Rp. 100,000–130,000
+                    Price for small size: Rp. 100,000 - 130,000
                   </p>
                   <p><b>Recommended flavors:</b></p>
                   <ul>
@@ -146,6 +146,47 @@
               </div>
         </div>
     </div>
+    <div id="modal3" class="modal" tabindex="-1">
+      <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+          <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  <b>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</b> is a renowned restaurant located in Pantjoran PIK, Jakarta. Established in 1925, this restaurant originally started in the old town area of Jakarta, Glodok.
+                </p>                
+                <p>
+                  Average cost per person: Rp. 100,000 - Rp. 200,000
+                </p>
+                <p><b>Signature Dishes:</b></p>
+                <ul>
+                  <li><b>Ayam Garam (Salted Chicken):</b> Tender and savory with a delicate balance of saltiness.</li>
+                  <li><b>Mie Goreng Hakka (Hakka Fried Noodles):</b> Rich, stir-fried flavors in every bite.</li>
+                  <li><b>Lumpia Goreng (Fried Spring Rolls):</b> Crispy rolls filled with fresh, flavorful ingredients.</li>
+                  <li><b>Mun Tahu (Braised Tofu):</b> A comforting dish with soft tofu and a hearty sauce.</li>
+                  <li><b>Mun Kiaw Mien:</b> Noodles cooked with fried dumplings, a signature dish of the restaurant.</li>
+                  <li><b>Lindung Cah Fumak:</b> Crispy lindung fish stir-fried with fumak vegetables, offering a unique and delightful taste.</li>
+                </ul>
+
+                <p>
+                  This restaurant offers a rich culinary experience with a history of nearly a century.
+                </p>
+          
+                <p>Facebook:
+                <a href="https://www.facebook.com/wongfukie/" target="_blank">www.facebook.com/wongfukie</a>
+                </p>
+                <img src="https://rouentan18.github.io/images/wong-fu-kie.jpg" class="img-fluid mb-3" alt="martabak-pecenongan-43">
+              </div>
+              <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div> -->
+            </div>
+      </div>
+  </div>
+
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
