--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -62,7 +62,7 @@
                     <a href="#" data-bs-toggle="modal" data-bs-target="#modal1">Pantjoran Pantai Indah Kapuk</a>
                     <ul>
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Martabak Pecenongan 43 - PIK</a> (3pm - 11pm)</li>
-                        <li>Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food 
+                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal3">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</a> 
                             (9am - 10pm)</li>
                         <li>New Tempo Doeloe (10am - 10pm)</li>
                     </ul>
