--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -33,7 +33,7 @@
         <p>Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
         <p>Highlights:</p>
         <ul>
-            <li>Rp. 100,000 &saymp; RM 28 </li>
+            <li>Rp. 100,000 &asymp; RM 28 </li>
             <li>Flight: KLM Royal Dutch Airlines</li>
             <li>Day 1 & 2 Jakarta</li>
             <li>Day 3 & 4 Bandung</li>
