--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -13,6 +13,24 @@
         .bi-icon {
             font-size: 1.5rem; /* Adjust size as needed */
         }
+
+        a {
+            text-decoration: none; /* Remove underline */
+            color: #007bff; /* Default color (blue) */
+            font-weight: bold; /* Make text bold */
+            transition: color 0.3s ease, border-bottom 0.3s ease;
+        }
+
+        /* Add underline effect on hover */
+        a:hover {
+            color: #0056b3; /* Darker blue on hover */
+            border-bottom: 2px solid #0056b3; /* Underline effect */
+        }
+
+        /* Add visited link styling (optional) */
+        a:visited {
+            color: #6c757d; /* Gray color for visited links */
+        }
     </style>
 </head>
 <body>
