--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -83,7 +83,7 @@
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Martabak Pecenongan 43 - PIK</a> (3pm - 11pm)</li>
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal3">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</a> 
                             (9am - 10pm)</li>
-                        <li>New Tempo Doeloe (10am - 10pm)</li>
+                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">New Tempo Doeloe</a> (10am - 10pm)</li>
                     </ul>
 
                 </li>
@@ -147,11 +147,11 @@
                     Price for small size: Rp. 100,000 - 130,000
                   </p>
                   <p><b>Recommended flavors:</b></p>
-                  <ul>
+                  <ol>
                     <li><b>Martabak Manis Coklat Keju:</b> A classic combination of chocolate and cheese.</li>
                     <li><b>Nutella + Banana:</b> Rich hazelnut spread paired with banana, perfectly sweet and not overwhelming.</li>
                     <li><b>Green Tea Cheese:</b> An innovative blend of matcha and cheese.</li>
-                  </ul>
+                  </ol>
             
                   <p>Website:
                   <a href="https://www.pecenongan43.com/" target="_blank">www.pecenongan43.com</a>
@@ -180,14 +180,14 @@
                   Average cost per person: Rp. 100,000 - Rp. 200,000
                 </p>
                 <p><b>Signature Dishes:</b></p>
-                <ul>
+                <ol>
                   <li><b>Ayam Garam (Salted Chicken):</b> Tender and savory with a delicate balance of saltiness.</li>
                   <li><b>Mie Goreng Hakka (Hakka Fried Noodles):</b> Rich, stir-fried flavors in every bite.</li>
                   <li><b>Lumpia Goreng (Fried Spring Rolls):</b> Crispy rolls filled with fresh, flavorful ingredients.</li>
                   <li><b>Mun Tahu (Braised Tofu):</b> A comforting dish with soft tofu and a hearty sauce.</li>
                   <li><b>Mun Kiaw Mien:</b> Noodles cooked with fried dumplings, a signature dish of the restaurant.</li>
                   <li><b>Lindung Cah Fumak:</b> Crispy lindung fish stir-fried with fumak vegetables, offering a unique and delightful taste.</li>
-                </ul>
+                </ol>
 
                 <p>
                   This restaurant offers a rich culinary experience with a history of nearly a century.
@@ -205,7 +205,46 @@
             </div>
       </div>
   </div>
+  <div id="modal4" class="modal" tabindex="-1">
+    <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">New Tempo Doeloe</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>
+                <b>New Tempo Doeloe</b> specializes in classic Indonesian home-style dishes, preserving traditional cooking methods while incorporating modern flavors.
+              </p>                
+              <p>
+                Average cost per person: Rp. 100,000 - Rp. 200,000
+              </p>
+              <p><b>Signature Dishes:</b></p>
+              <ol>
+                <li><b>Nasi Padang:</b> A complete meal featuring various side dishes like rendang, sayur lodeh, ayam goreng, and more.</li>
+                <li><b>an Gurame Asam Manis:</b> Crispy fried gurame fish topped with a perfectly balanced sweet and sour sauce.</li>
+                <li><b>Sate Ayam Madura:</b> Tender chicken skewers grilled to perfection, served with a rich peanut sauce.</li>
+                <li><b>Tahu Telor:</b> A fluffy fried tofu and egg dish accompanied by a sweet soy-based sauce.</li>
+                <li><b>Rendang Sapi:</b> Slow-cooked beef rendang with a deep, savory, and spicy coconut flavor.</li>
+                <li><b>Nasi Goreng Kampung:</b> Traditional village-style fried rice, packed with spices and topped with crispy anchovies.</li>
+              </ol>
 
+              <p>
+                This restaurant offers a rich culinary experience with a history of nearly a century.
+              </p>
+        
+              <p>Website:
+              <a href="https://g.co/kgs/Kp8C7or" target="_blank">Google Review</a>
+              </p>
+              <img src="https://rouentan18.github.io/images/new-tempo-doeloe.jpg" class="img-fluid mb-3" alt="martabak-pecenongan-43">
+            </div>
+            <!-- <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div> -->
+          </div>
+    </div>
+</div>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
