--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
+        .navbar a {
+          color: beige;
+        }
+
         .card-link {
             text-decoration: none;
             color: inherit;
@@ -17,6 +21,7 @@
         .card-link:hover {
             color: inherit;
         }
+        
         .bi-icon {
             font-size: 1.5rem; /* Adjust size as needed */
         }
