--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -14,6 +14,10 @@
             font-size: 1.5rem; /* Adjust size as needed */
         }
 
+        .navbar a {
+          color: beige;
+        }
+
         a {
             text-decoration: none; /* Remove underline */
             color: #007bff; /* Default color (blue) */
@@ -83,7 +87,7 @@
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">Martabak Pecenongan 43 - PIK</a> (3pm - 11pm)</li>
                         <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal3">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</a> 
                             (9am - 10pm)</li>
-                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal2">New Tempo Doeloe</a> (10am - 10pm)</li>
+                        <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal4">New Tempo Doeloe</a> (10am - 10pm)</li>
                     </ul>
 
                 </li>
