--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
         .navbar a {
-          color: beige;
+          color: beige !important;
         }
 
         .card-link {
@@ -21,7 +21,7 @@
         .card-link:hover {
             color: inherit;
         }
-        
+
         .bi-icon {
             font-size: 1.5rem; /* Adjust size as needed */
         }
