--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
         .navbar a {
-          color: beige !important;
+          color:black !important;
         }
 
         .card-link {
