--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -15,7 +15,7 @@
         }
 
         .navbar a {
-          color: beige !important;
+          color: black !important;
         }
 
         a {
