--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -233,6 +233,12 @@
                 <li><b>Nasi Goreng Kampung:</b> Traditional village-style fried rice, packed with spices and topped with crispy anchovies.</li>
               </ol>
 
+              <p><b>Dessert:</b></p>
+              <ol>
+                <li><b>Es Cendol:</b> A refreshing dessert with green rice flour jelly, coconut milk, and palm sugar syrup.</li>
+                <li><b>Klepon:</b> Sweet glutinous rice balls filled with palm sugar, coated in grated coconut.</li>
+              </ol>
+
               <p>
                 This restaurant offers a rich culinary experience with a history of nearly a century.
               </p>
