--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -58,7 +58,7 @@
             <li>Rp. 100,000 &asymp; RM 28 </li>
             <li>Flight: KLM Royal Dutch Airlines</li>
             <li>Day 1 & 2 Jakarta (<a href="https://shorturl.at/Cjbo5" target="_blank">Holiday Inn</a>)</li>
-            <li>Day 3 & 4 Bandung (<a href="https://g.co/kgs/9xCNZ5Y" target="_blank">PRIME PARK Hotel</a>)</li>
+            <li>Day 3 & 4 Bandung (<a href="https://shorturl.at/2Oiw8" target="_blank">PRIME PARK Hotel</a>)</li>
             <li>Day 5 Go to Jakarta airport from Bandung</li>
         </ul>
 
