--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -3,37 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jakarta-Bandung</title>
+    <meta name="description" content="Explore the perfect mix of urban exploration and natural retreats with a family trip to Jakarta and Bandung.">
+    <title>Jakarta & Bandung Family Trip</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
+        /* Custom Styles */
+        .navbar {
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
         .bi-icon {
-            font-size: 1.5rem; /* Adjust size as needed */
+            font-size: 1.5rem;
         }
-
         .navbar a {
-          color: black !important;
+            color: black !important;
         }
-
         a {
-            text-decoration: none; /* Remove underline */
-            color: #007bff; /* Default color (blue) */
-            font-weight: bold; /* Make text bold */
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
             transition: color 0.3s ease, border-bottom 0.3s ease;
         }
-
-        /* Add underline effect on hover */
         a:hover {
-            color: #0056b3; /* Darker blue on hover */
-            border-bottom: 2px solid #0056b3; /* Underline effect */
+            color: #0056b3;
+            border-bottom: 2px solid #0056b3;
         }
-
-        /* Add visited link styling (optional) */
         a:visited {
-            color: #6c757d; /* Gray color for visited links */
+            color: #6c757d;
         }
     </style>
 </head>
@@ -51,7 +50,7 @@
     <div class="container mt-4">
         <h1>Jakarta & Bandung</h1>
         <p>Date: March 29 - April 2, 2025</p>
-        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="img-fluid mb-3" alt="Jakarta-Bandung">
+        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="img-fluid mb-3" alt="A scenic view representing Jakarta and Bandung trip">
         <p>Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
         <p>Highlights:</p>
         <ul>
