--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -145,7 +145,7 @@
     </div>
   </div>
   <div id="modal-martabak" class="modal fade" tabindex="-1" aria-labelledby="modalLabelMartabak" aria-hidden="true">
-    <div class="modal-dialog modal-fullscreen-sm-down" >
+    <div class="modal-dialog" >
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="modalLabelMartabak">Martabak Pecenongan 43 - PIK</h5>
