--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -176,11 +176,11 @@
       </div>
     </div>
   </div>
-  <div id="modal3" class="modal" tabindex="-1">
-    <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+  <div id="modal-wong-fu-kie" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-wong-fu-kie" aria-hidden="true">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</h5>
+          <h5 class="modal-title" id="modalLabel-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
