--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -96,7 +96,7 @@
             <ul>
               <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-martabak">Martabak Pecenongan 43 - PIK</a> (3pm -
                 11pm)</li>
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal3">Wong Fu Kie Pantjoran PIK Hakka Authentic
+              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic
                   Chinese Food</a>
                 (9am - 10pm)</li>
               <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal4">New Tempo Doeloe</a> (10am - 10pm)</li>
