--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -99,7 +99,7 @@
               <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic
                   Chinese Food</a>
                 (9am - 10pm)</li>
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal4">New Tempo Doeloe</a> (10am - 10pm)</li>
+              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-new-tempo-doeloe">New Tempo Doeloe</a> (10am - 10pm)</li>
             </ul>
 
           </li>
@@ -214,18 +214,14 @@
           <img src="https://rouentan18.github.io/images/wong-fu-kie.jpg" class="img-fluid mb-3"
             alt="martabak-pecenongan-43">
         </div>
-        <!-- <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div> -->
       </div>
     </div>
   </div>
-  <div id="modal4" class="modal" tabindex="-1">
-    <div class="modal-dialog modal-fullscreen-sm-down" tabindex="-1">
+  <div id="modal-new-tempo-doeloe" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-new-tempo-doeloe" aria-hidden="true">
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">New Tempo Doeloe</h5>
+          <h5 class="modal-title" id="modalLabel-new-tempo-doeloe">New Tempo Doeloe</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -267,10 +263,6 @@
           <img src="https://rouentan18.github.io/images/new-tempo-doeloe.jpg" class="img-fluid mb-3"
             alt="martabak-pecenongan-43">
         </div>
-        <!-- <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div> -->
       </div>
     </div>
   </div>
