--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,22 +12,46 @@
 
     <style>
         .navbar a {
-          color:black !important;
+            color: black !important;
         }
 
         .card-link {
             text-decoration: none;
             color: inherit;
         }
+
         .card-link:hover {
             color: inherit;
         }
 
         .bi-icon {
-            font-size: 1.5rem; /* Adjust size as needed */
+            font-size: 1.5rem;
+            /* Adjust size as needed */
+        }
+
+
+        footer {
+            background-color: #f8f9fa;
+            padding: 20px 0;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #6c757d;
+            margin-top: 50px;
+            border-top: 1px solid #e9ecef;
+        }
+
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            color: #0056b3;
+            text-decoration: underline;
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -44,10 +69,12 @@
             <div class="col-md-4 mb-4">
                 <a href="jakarta-bandung.html" class="card-link">
                     <div class="card">
-                        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="card-img-top" alt="Jakarta & Bandung">
+                        <img src="https://rouentan18.github.io/images/jakarta-bandung.jpg" class="card-img-top"
+                            alt="Jakarta & Bandung">
                         <div class="card-body">
                             <h5 class="card-title">Jakarta & Bandung</h5>
-                            <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban exploration and natural retreats.</p>
+                            <p class="card-text">Family Adventure to Jakarta and Bandung, perfect mix of urban
+                                exploration and natural retreats.</p>
                             <p class="text-muted"><strong>Date:</strong> March 29 - April 2, 2025</p>
                         </div>
                     </div>
@@ -72,10 +99,12 @@
             <div class="col-md-4 mb-4">
                 <a href="tokyo.html" class="card-link">
                     <div class="card">
-                        <img src="https://rouentan18.github.io/images/tokyo.webp" class="card-img-top" alt="Tokyo Discovery">
+                        <img src="https://rouentan18.github.io/images/tokyo.webp" class="card-img-top"
+                            alt="Tokyo Discovery">
                         <div class="card-body">
                             <h5 class="card-title">Tokyo Discovery</h5>
-                            <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech hubs.</p>
+                            <p class="card-text">A cultural immersion in Tokyo with visits to temples, gardens, and tech
+                                hubs.</p>
                             <p class="text-muted"><strong>Date:</strong> Sep 13 - Sep 21, 2025</p>
                         </div>
                     </div>
@@ -84,7 +113,15 @@
         </div>
     </div>
 
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Travel Planner. All Rights Reserved.</p>
+            <p>Visit us at <a href="https://rouentan18.github.io" target="_blank">rouentan18.github.io</a></p>
+        </div>
+    </footer>
+
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
