--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -41,6 +41,26 @@
     a:visited {
       color: #6c757d;
     }
+
+    footer {
+      background-color: #f8f9fa;
+      padding: 20px 0;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #6c757d;
+      margin-top: 50px;
+      border-top: 1px solid #e9ecef;
+    }
+
+    footer a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #0056b3;
+      text-decoration: underline;
+    }
   </style>
 </head>
 
@@ -94,12 +114,15 @@
           <li>
             <a href="#" data-bs-toggle="modal" data-bs-target="#modal-pantjoran">Pantjoran Pantai Indah Kapuk</a>
             <ul>
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-martabak">Martabak Pecenongan 43 - PIK</a> (3pm -
+              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-martabak">Martabak Pecenongan 43 - PIK</a>
+                (3pm -
                 11pm)</li>
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic
+              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka
+                  Authentic
                   Chinese Food</a>
                 (9am - 10pm)</li>
-              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-new-tempo-doeloe">New Tempo Doeloe</a> (10am - 10pm)</li>
+              <li><a href="#" data-bs-toggle="modal" data-bs-target="#modal-new-tempo-doeloe">New Tempo Doeloe</a> (10am
+                - 10pm)</li>
             </ul>
 
           </li>
@@ -145,7 +168,7 @@
     </div>
   </div>
   <div id="modal-martabak" class="modal fade" tabindex="-1" aria-labelledby="modalLabelMartabak" aria-hidden="true">
-    <div class="modal-dialog" >
+    <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="modalLabelMartabak">Martabak Pecenongan 43 - PIK</h5>
@@ -176,11 +199,13 @@
       </div>
     </div>
   </div>
-  <div id="modal-wong-fu-kie" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-wong-fu-kie" aria-hidden="true">
+  <div id="modal-wong-fu-kie" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-wong-fu-kie"
+    aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modalLabel-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food</h5>
+          <h5 class="modal-title" id="modalLabel-wong-fu-kie">Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food
+          </h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -217,7 +242,8 @@
       </div>
     </div>
   </div>
-  <div id="modal-new-tempo-doeloe" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-new-tempo-doeloe" aria-hidden="true">
+  <div id="modal-new-tempo-doeloe" class="modal fade" tabindex="-1" aria-labelledby="modalLabel-new-tempo-doeloe"
+    aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -266,6 +292,13 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Travel Planner. All Rights Reserved.</p>
+      <p>Visit us at <a href="https://rouentan18.github.io" target="_blank">rouentan18.github.io</a></p>
+    </div>
+  </footer>
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
