--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -295,10 +295,11 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Travel Planner. All Rights Reserved.</p>
-      <p>Visit us at <a href="https://rouentan18.github.io" target="_blank">rouentan18.github.io</a></p>
+        <p>🌟 Thanks for tagging along on this adventure! 🌏</p>
+        <p>Every trip is a story waiting to be told. Here's to more amazing journeys! 🚀✈️</p>
+        <p>Keep exploring, keep dreaming. See you on the next trip! 🗺️💖</p>
     </div>
-  </footer>
+</footer>
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
