--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
             </div>
         </div>
     </div>
-
     <footer>
         <div class="container">
-            <p>&copy; 2024 Travel Planner. All Rights Reserved.</p>
-            <p>Visit us at <a href="https://rouentan18.github.io" target="_blank">rouentan18.github.io</a></p>
+            <p>🌟 Thanks for tagging along on this adventure! 🌏</p>
+            <p>Every trip is a story waiting to be told. Here's to more amazing journeys! 🚀✈️</p>
+            <p>Keep exploring, keep dreaming. See you on the next trip! 🗺️💖</p>
         </div>
     </footer>
 
